--- a/B2A31/作業04/作業04.html
+++ b/B2A31/作業04/作業04.html
@@ -24,7 +24,7 @@
 		border-color:red;
 		border-style: solid;
 		border-width: 1px;
-		font-family: "宗楷體.ttf";
+		font-family:MyFont01 ;
 	}
 	.box2{
 		width: 20%;
@@ -33,7 +33,7 @@
 		border-color: rgb(193, 152, 238);
 		border-style: dotted;
 		border-width: 2px;
-		font-family:"竹風體01.ttf";
+		font: MyFont02 ;
 	}
 	.box3{
 		width: 20%;
@@ -60,7 +60,7 @@
 		border-color: rgb(58, 210, 147);
 		border-style: solid;
 		border-width: 1px;
-		font-family: "宗楷體.ttf";
+		font-family: MyFont01;
 	}
 	.box6{
 		width: 20%;
@@ -69,7 +69,7 @@
 		border-color: rgb(185, 84, 111);
 		border-style: double;
 		border-width: 2px;
-		font-family: "竹風體02.ttf";
+		font-family: MyFont02;
 	}
 	.box7{
 		width: 20%;
