--- a/B2A31/作業05/作業05.html
+++ b/B2A31/作業05/作業05.html
@@ -24,7 +24,7 @@ document.write ("<p><h4>2.大家好我最喜歡的食物是芒果跟草莓</h4><
 document.write ("<div>以下為變數設定練習</div>");
 document.write ("<p>3. 我是"+myName+".今年"+myAge+"歲"+"</p>" );
 document.write ("<p>4.我的身高是"+myHeight+"公分."+"我的體重為"+myWeight+"公斤 "+"</p>");
-document.write ("<p>5.所以我的BMI為"+myHeight /Math.pow ((myWeight/100),2)+"</p>");
+document.write ("<p>5.所以我的BMI為"+myWeight /Math.pow ((myHeight/100),2)+"</p>");
 document.write ("<div>以下for計次迴旋控制</div>");
 var sum=0;
 for (i=1;i<=100;i++){
@@ -44,7 +44,7 @@ showSum(10);
 showSum(100);
 showSum(1000);
 showSum(10000);
-document.write ("<div>以下為乘法表</div>");
+document.write ("<div>以下為八八乘法表</div>");
 function nTimeNtable(n){
 	for (i=1;i<n;i++){
 		for (j=1;j<n;j++){
