--- a/B2A31/作業06/作業06.html
+++ b/B2A31/作業06/作業06.html
@@ -35,10 +35,10 @@
 	   <input type="radio" name="fruit" id="fruit03" value="黑鑽石桑葚(5台斤)">黑鑽石桑葚5台斤 749元<br>
 	</form>
 	<br>
-	<button onclick="shoppingInfo()""><h4>結帳</h4></button>
+	<button onclick="shoppingInfo()"><h4>結帳</h4></button>
 	<div id="demo"></div>
 <script>
-	function (){
+	function shoppingInfo(){
 	const x =document.getElementById("form01");
     var item ="";
 	var price =0;
