--- a/B2A31/作業06/作業06.html
+++ b/B2A31/作業06/作業06.html
@@ -65,7 +65,7 @@
 	text += item + x.elements[i].value + "<br>";
 }
 for(i=5;i<=7;i++){
-	if(x.elements[i].check==true){
+	if(x.elements[i].checked==true){
 		switch (i) {
 			case 5:
 				price=475;
