--- a/B2A31/作業10/作業10.html
+++ b/B2A31/作業10/作業10.html
@@ -48,46 +48,57 @@
 	<tr>
 		<th>姓名</th>
 		<td id="name"></td>
+        <td></td>
+        <td></td>
 	</tr>
 	<tr>
 		<th>收件地址</th>
 		<td id="address"></td>
+        <td></td>
+        <td></td>
 	</tr>
 	<tr>
 		<th>電話</th>
 		<td id="phone"></td>
+        <td></td>
+        <td></td>
 	</tr>
 	<tr>
 		<th>電子郵件</th>
 		<td id="email"></td>
+        <td></td>
+        <td></td>
 	</tr>
 	<tr>
 		<th>指定送貨日期</th>
 		<td id="date"></td>
+        <td></td>
+        <td></td>
 	</tr>
 	<tr>
 		<th>水果種類</th>
 		<td id="fruit1"></td>
 		<td id="fruit1Qty"></td>
 		<td id="fruit1Price"></td>
+        
 	</tr>
 	<tr>
-		<th></th>
+		<th>水果種類</th>
 		<td id="fruit2"></td>
 		<td id="fruit2Qty"></td>
 		<td id="fruit2Price"></td>
 	</tr>
 	<tr>
-		<th></th>
+		<th>水果種類</th>
 		<td id="fruit3"></td>
 		<td id="fruit3Qty"></td>
 		<td id="fruit3Price"></td>
 	</tr>
 	<tr>
 		<th>總金額</th>
-		<td></td>
-		<td></td>
+    
 		<td id="totalPrice"></td>
+        <td></td>
 	</tr>
 </table>
 
