--- a/B2A31/作業13/index.html
+++ b/B2A31/作業13/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>B2A31洪婉庭作業13</title>
+    <title>B2A31洪婉庭 作業13</title>
     <link type="text/css" rel="stylesheet" href="css/styles.css"/>
     <link type="text/css" rel="stylesheet" href="css/skitter.styles.css"/>
     <style>
@@ -32,70 +32,125 @@
 <body>
 <div class="border_box">
     <div class="box_skitter box_skitter_large">
-
-
+        <ul>
+            <li>
+                <img src="images/01.jpg" class="cubeShow">
+                <div class="label_text">
+                    <p>最近的療癒系動漫代表之一 <能幹貓今天也憂鬱></p>
+                </div>
+            </li>
 
             <li>
-                <img src="03.jpg" class="cubeJelly">
+                <img src="images/02.jpg" class="glassCube">
+                <div class="label_text">
+                    <p>被女主角撿回家後變成家庭主夫的貓咪</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/03.jpg" class="cubeJelly">
                 <div class="label_text">
                     <p>在大家期待下終於可以見到會動的俞吉</p>
                 </div>
             </li>
 
             <li>
-                <img src="04.jpg." class="directionRight">
+                <img src="images/04.jpg" class="directionRight">
                 <div class="label_text">
                     <p>會煮飯的貓是否吸引你的注意力呢</p>
                 </div>
             </li>
 
             <li>
-                <img src="08.jpg" class="fade">
+                <img src="images/05.jpg" class="paralell">
+                <div class="label_text">
+                    <p>在生病感冒時會在你身旁陪伴的大貓咪</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/06.jpg" class="upBars">
+                <div class="label_text">
+                    <p>在睡覺時間會跟一班的貓一樣陪伴你入睡</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/07.jpg" class="circles">
+                <div class="label_text">
+                    <p>得到稀有食材或者禮物會雙眼發光的貓咪俞吉^ ^</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/08.jpg" class="fade">
                 <div class="label_text">
                     <p>大大的貓也是有不想做事的時候呢</p>
                 </div>
             </li>
 
             <li>
-                <img src="09.jpg" class="circlesInside">
+                <img src="images/09.jpg" class="circlesInside">
                 <div class="label_text">
                     <p>貓咪哄睡非常的快樂</p>
                 </div>
             </li>
 
             <li>
-                <img src="10.jpg" class="glassBlock">
+                <img src="images/10.jpg" class="glassBlock">
                 <div class="label_text">
                     <p>想不到還可以幫你吹頭髮吧</p>
                 </div>
             </li>
 
-
-
             <li>
-                <img src="12.jpg" class="cubeSpread">
+                <img src="images/11.jpg" class="cubeSize">
                 <div class="label_text">
-                    <p>挑菜時是不是在想晚餐的菜單呢</p>
+                    <p>大掃除時還能助你一臂之力</p>
                 </div>
             </li>
 
-        
+            <li>
+                <img src="images/12.jpg" class="cubeSpread">
+                <div class="label_text">
+                    <p>挑菜時是不是在想晚餐的菜單呢:D</p>
+                </div>
+            </li>
 
             <li>
-                <img src="15.jpg" class="horizontal">
+                <img src="images/13.jpg" class="cubeRandom">
+                <div class="label_text">
+                    <p>冬天時主人離不開暖被俞吉也是很無奈呢</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/14.jpg" class="cubeStop">
+                <div class="label_text">
+                    <p>大貓咪跟小貓咪真的差好多阿</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="images/15.jpg" class="horizontal">
                 <div class="label_text">
                     <p>跟一般貓比起來是不是很大隻呢</p>
                 </div>
             </li>
 
             <li>
-                <img src="16.jpg" class="circlesRotate">
+                <img src="images/16.jpg" class="circlesRotate">
                 <div class="label_text">
-                    <p>趕快去看吧</p>
+                    <p>剛撿回來時才小小一隻喔</p>
                 </div>
             </li>
 
-
+            <li>
+                <img src="images/17.jpg" class="cubeSpread">
+                <div class="label_text">
+                    <p>趕快去看吧!!!</p>
+                </div>
+            </li>
 
 
         </ul>
